--- a/web/src/Button.css
+++ b/web/src/Button.css
@@ -13,6 +13,7 @@ a.button {
     color: white;
     text-decoration: none;
     font-weight: bold;
+    cursor: pointer;
 }
 a.button.selected {
     background: #ce342c;
